# cairo-rs

./: .gitignore  Cargo.toml  README.md  data.js
cairo-py/: Cargo.toml
cairo-py/src/: lib.rs
docs/discussion/: rc_refcell_alternatives.md
python-hints/src/: lib.rs
python-lib/: Cargo.toml
python-lib/src/: lib.rs
rust_python_ffi/: README.md
rust_python_ffi/ffi/: Cargo.toml  pyproject.toml
rust_python_ffi/ffi/src/: lib.rs
rust_python_ffi/python_executor/: Cargo.toml
rust_python_ffi/python_executor/src/: lib.rs  main.rs  vm_poc.rs
rust_python_ffi/python_server/: Makefile
rust_python_ffi/python_server/.env/: pyvenv.cfg
rust_python_ffi/python_server/src/: main.py
rust_python_ffi/vm/: Cargo.toml  pyproject.toml
rust_python_ffi/vm/src/: lib.rs
rust_python_ffi/vm_core/: Cargo.toml
rust_python_ffi/vm_core/src/: lib.rs
rust_python_ffi/vm_poc/: Cargo.toml  pyproject.toml
rust_python_ffi/vm_poc/.env/: pyvenv.cfg
rust_python_ffi/vm_poc/src/: lib.rs
src/: main.rs  math_utils.rs  utils.rs
src/hint_processor/builtin_hint_processor/: builtin_hint_processor_definition.rs  find_element_hint.rs  hint_code.rs  keccak_utils.rs  math_utils.rs  python_executor.rs  squash_dict_utils.rs  usort.rs
src/hint_processor/builtin_hint_processor/python_executor/: mod.rs
src/serde/: deserialize_program.rs  deserialize_utils.rs
src/vm/: vm_core.rs
src/vm/errors/: vm_errors.rs
src/vm/hints/: hint_utils.rs
src/vm/runners/builtin_runner/: hash.rs
unix_socket_example/: README.md  ext_process.py
unix_socket_example/src/: main.rs
