[package]
name = "cairo-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cairo_py"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4"
cairo-rs = { path = ".." }

[dependencies.pyo3]
features = ["num-bigint", "extension-module"]
