[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ffi"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.3"
pyo3 = { version = "0.16.5", features = ["extension-module", "num-bigint"] }
vm_core = { path = "../vm_core" } 
