[package]
name = "vm_poc"
version = "0.1.0"
edition = "2021"

[lib]
name = "vm_poc"
crate-type = ["cdylib"]
#crate-type = ["lib"]

#[dependencies]
#pyo3 = { version = "0.17.1", features = ["extension-module"] }
#pyo3 = { version = "0.17.1", features = ["auto-initialize"] }

[dependencies.pyo3]
version = "0.16.3"
features = ["auto-initialize"]
